<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="tasks"
            type="com.zaytsevaa.eptaskmanager.db.TaskEntity" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:elevation="@dimen/cardview_default_elevation" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="?android:selectableItemBackground"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/apt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{tasks.aptName}"
                android:hint="Apt_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@id/start_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/start_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintStart_toStartOf="@id/apt_name"
                app:layout_constraintTop_toBottomOf="@id/apt_name" />

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{tasks.taskStartTime.toLocaleString()}"
                android:hint="date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/start_time_label" />

            <TextView
                android:id="@+id/arrival_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrived"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintStart_toStartOf="@id/start_time_label"
                app:layout_constraintTop_toBottomOf="@id/start_time_label" />

            <TextView
                android:id="@+id/arrival_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{tasks.taskArrivalTime.toLocaleString()}"
                android:hint="date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/start_time"
                app:layout_constraintTop_toTopOf="@id/arrival_time_label" />

            <TextView
                android:id="@+id/end_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintStart_toStartOf="@id/start_time_label"
                app:layout_constraintTop_toBottomOf="@id/arrival_time_label" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{tasks.taskEndTime.toLocaleString()}"
                android:hint="date"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@id/start_time"
                app:layout_constraintTop_toTopOf="@id/end_time_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>